--- a/app/template/article/show.html
+++ b/app/template/article/show.html
@@ -1,19 +1,37 @@
 {% extends "../layout.html" %}
 
 {% block css %}
+<link rel="stylesheet" href="/css/vendor/prism.css" />
 <link rel="stylesheet" href="/css/article/show.css" />
+<link rel="stylesheet" href="/css/article/_article.css" />
 {% endblock %}
 
 {% block js %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/2.0.0/remarkable.min.js"></script>
+<script src="/js/vendor/prism.js"></script>
+<script src="/js/module/parser.js"></script>
 <script src="/js/article/show.js"></script>
 {% endblock %}
 
 {% block title %}
-詳細 | {{ block.Super }}
+{{ Article.Title }} | {{ block.Super }}
 {% endblock %}
 
 {% block content %}
-<p>{{ Message }}</p>
-<p>{{ Now }}</p>
-<p>{{ ID }}</p>
+<div class="l-col l-row l-v-padd">
+  <div class="article">
+    <div class="article__header">
+      <h1 class="article__title">{{ Article.Title }}</h1>
+      <a class="article__edit btn--info" href="/articles/{{ Article.ID }}/edit">編集</a>
+      <div class="article__date">
+        <div class="article__updated">更新: {{ Article.Updated|date:"2022-01-01" }}</div>
+        <div class="article__published">公開: {{ Article.Created|date:"2022-01-01" }}</div>
+      </div>
+    </div>
+    <div class="article-body">
+      <div id="article-body" data-markdown="{{ Article.Body }}"></div>
+    </div>
+  </div>
+  <div class="article-footer"></div>
+</div>
 {% endblock %}
